@@ -70,43 +70,32 @@ public class OrderService {
     }
 
 
-    public String createOrderFromCart(String userId) {
-        // 1) fetch-or-404 the cart
-        Cart cart = cartRepository.findByUserId(userId)
-                .orElseThrow(() -> new IllegalStateException("Cart not found"));
+    public String createOrderFromCart(String cartId, String userId) {
+        Cart cart = cartRepository.findById(cartId)
+                .orElseThrow(() -> new IllegalArgumentException("Cart not found: " + cartId));
 
-        // 2) pull out CartItems
         List<CartItem> items = cart.getItems();
-        if (items.isEmpty()) {
-            throw new IllegalStateException("Cart is empty");
-        }
+        if (items.isEmpty()) throw new IllegalStateException("Cart is empty");
 
-        // 3) extract parallel lists of IDs and quantities
+        // extract parallel lists
         List<String>  productIds = items.stream()
                 .map(CartItem::getProductId)
-                .collect(Collectors.toList());
+                .toList();
         List<Integer> quantities = items.stream()
                 .map(CartItem::getQuantity)
-                .collect(Collectors.toList());
+                .toList();
 
-        // 4) build the Order
         Order o = new Order();
         o.setOrderId(UUID.randomUUID().toString());
-        o.setCartId(cart.getCartId());
+        o.setCartId(cartId);
         o.setUserId(userId);
         o.setStatus("Processing");
         o.setPaid(false);
         o.setShipped(false);
-
-        // ← snapshot both fields
         o.setProductIds(productIds);
         o.setQuantities(quantities);
 
         orderRepository.save(o);
-
-        // 5) clear out the cart for next time
-        cart.getItems().clear();
-        cartRepository.save(cart);
 
         return o.getOrderId();
     }
@@ -123,6 +112,18 @@ public class OrderService {
         // Check if the order can be cancelled (must be in "Processing" status)
         if (!order.getStatus().equals("Processing")) {
             return ResponseEntity.badRequest().body("Order can only be cancelled if it is in 'Processing' status. Current status: " + order.getStatus());
+        }
+
+        List<String> ids   = order.getProductIds();
+        List<Integer> qtys = order.getQuantities();
+        for (int i = 0; i < ids.size(); i++) {
+            String productId = ids.get(i);
+            int    qty       = qtys.get(i);
+
+            productRepository.findById(productId).ifPresent(product -> {
+                product.setStockCount(product.getStockCount() + qty);
+                productRepository.save(product);
+            });
         }
 
         // Update order status
